tests/more_generics/more_generics.exp
Error ------------------------------------------------------------- poly.js:3:36

Error: poly.js:3
  3: function foo2<T,S>(x:T):S { return x; }
                                        ^ Cannot return `x` because `T` [1] is incompatible with `S` [2].
  References:
    3: function foo2<T,S>(x:T):S { return x; }
                            ^ [1]: `T`
    3: function foo2<T,S>(x:T):S { return x; }
                               ^ [2]: `S`

Error ------------------------------------------------------------ poly.js:10:38

Error: poly.js:10
 10: function foo5<T>():Array<T> { return x; }
                                          ^ Cannot return `x` because in type argument `T`, `T` [1] is incompatible with `T` [1].
  References:
   10: function foo5<T>():Array<T> { return x; }
                                ^ [1]: `T`

Error ------------------------------------------------------------ poly.js:20:34

Error: poly.js:20
 20: function foo7<R>(x:R):R { return foo5(); }
                                      ^^^^^^ Cannot return `foo5()` because array type [1] is incompatible with `R` [2].
  References:
   10: function foo5<T>():Array<T> { return x; }
                          ^^^^^^^^ [1]: array type
   20: function foo7<R>(x:R):R { return foo5(); }
                             ^ [2]: `R`

Error ------------------------------------------------------------- poly.js:24:3

Error: poly.js:24
 24:   y();
       ^ Cannot call `y` because `U` [1] is not a function.
  References:
   22: function foo8<U>(x:U,y):U {
                          ^ [1]: `U`


Found 4 errors
